# xcsp2cpo

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
tests/: __init__.py  test_converter.py  test_parser.py  test_transformations.py
tests/fixtures/: array_example.xml  extension.xml  intension.xml  optimization.xml  simple_csp.xml  sum_constraint.xml
xcsp2cpo/: __init__.py  cli.py  converter.py  model.py  parser.py  writer.py
xcsp2cpo/constraints/: __init__.py  comparison.py  connection.py  counting.py  generic.py
xcsp2cpo/transformations/: __init__.py  decompose.py  normalize.py  rewrite.py
